--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,19 @@ attrs==23.1.0
 bcrypt==3.1.5
 beautifulsoup4==4.12.2
 blinker==1.4
+cachelib==0.10.2
 certifi==2023.7.22
 cffi==1.11.5
 charset-normalizer==3.2.0
 Click==7.0
 colorama==0.4.1
 cryptography==2.5
+docutils==0.20.1
+feedgenerator==2.1.0
 Flask==1.0.2
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
+Flask-OAuthlib==0.9.6
 Flask-SQLAlchemy==2.3.2
 Flask-User==1.0.1.5
 Flask-WTF==0.14.2
@@ -24,6 +28,7 @@ flaskfilemanager==0.0.6
 frozenlist==1.3.3
 geoip2==4.7.0
 idna==3.4
+imageio==2.31.2
 importlib-metadata==6.7.0
 IPy==1.1
 isort==4.3.4
@@ -32,13 +37,20 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 littlefish==0.0.75
 lxml==4.9.3
+markdown-it-py==2.2.0
 MarkupSafe==1.1.0
 maxminddb==2.4.0
 mccabe==0.6.1
+mdurl==0.1.2
 multidict==6.0.4
+networkx==2.6.3
+numpy==1.21.6
+oauthlib==2.1.0
+packaging==23.1
 passlib==1.7.1
-Pillow==5.3.0
+Pillow==9.5.0
 pycparser==2.19
+Pygments==2.16.1
 pylint==2.2.2
 pylint-flask==0.5
 pylint-plugin-utils==0.4
@@ -46,12 +58,19 @@ PyMarkovChain==1.8
 PyMySQL==1.1.0
 python-dateutil==2.8.2
 pytz==2023.3
+PyWavelets==1.3.0
 PyYAML==6.0.1
 requests==2.31.0
+requests-oauthlib==1.1.0
+rich==13.5.2
+scikit-image==0.19.3
+scipy==1.7.3
 six==1.12.0
 soupsieve==2.4.1
 SQLAlchemy==1.2.15
+tifffile==2021.11.2
 typing_extensions==4.7.1
+Unidecode==1.3.6
 urllib3==2.0.4
 Werkzeug==0.14.1
 Whoosh==2.7.4
